Added marker for lab1

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -11,3 +11,4 @@ markers =
     integration: all tests on integration level (run with '-m integration')
     staging: unfinished tests (run with '- staging')
     namespaces: all tests belonging to the namespaces challenge (run with '-m namespaces') - all tests should pass
+    lab1: all test for lab1 (run with 'm lab1')
