--- a/.github/workflow/pytest.yml
+++ b/.github/workflow/pytest.yml
@@ -17,14 +17,14 @@ jobs:
       - name: Set up Python 3.10
         uses: actions/setup-python@v4
         with:
-          python-version: "3.10"
-          cache: "pip"
+          python-version: '3.10'
+          cache: 'pip'
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-      - name: Unit Tests
-        run: |
-          python -m pytest -m unit
+    - name: Unit Tests
+      run: | 
+        python -m pytest -m unit
