--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -21,10 +21,12 @@ jobs:
           cache: "pip"
 
       - name: Install dependencies
+        working-directory: ./backend
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
       - name: Unit Tests
+        working-directory: ./backend
         run: |
           python -m pytest -m unit
