--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -12,3 +12,4 @@ markers =
     staging: unfinished tests (run with '- staging')
     namespaces: all tests belonging to the namespaces challenge (run with '-m namespaces') - all tests should pass
     lab1: all test for lab1 (run with 'm lab1')
+    tz: tests for pytest-playground
